--- a/app/modules/companies/templates/companies/offer_editor.html
+++ b/app/modules/companies/templates/companies/offer_editor.html
@@ -45,6 +45,27 @@
                         <option value="archived" {% if current_status == 'archived' %}selected{% endif %}>Archived</option>
                     </select>
                 </div>
+                <div class="col-12 col-md-7">
+                    <span class="form-label d-block">Classifications (optional)</span>
+                    <div class="row g-2">
+                        {% set selected_classifications = offer.classification_values if offer else [] %}
+                        {% for key, label in classification_choices.items() %}
+                            <div class="col-12 col-sm-6">
+                                <div class="form-check">
+                                    <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        id="offer-classification-{{ key }}"
+                                        name="classifications"
+                                        value="{{ key }}"
+                                        {% if key in selected_classifications %}checked{% endif %}
+                                    >
+                                    <label class="form-check-label" for="offer-classification-{{ key }}">{{ label }}</label>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
                 <div class="col-12 col-md-4">
                     <label for="offer-base-discount" class="form-label">Base discount (%)</label>
                     <input
